[tool.poetry]
name = "tainers"
version = "0.3.0"
description = "Simple replacement for testcontainers-python"
authors = ["aperullo <18688190+aperullo@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
docker = ">=5.0.3,<7.0.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
mypy = "^0.971"
isort = "^5.11.5"
coverage = {extras = ["toml"], version = "^6.5.0"}
requests = "^2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
addopts = "-s --cov=tainers --cov-report=term --cov-report=xml"
testpaths = ["tests"]
markers = [
    "functional"
]

[tool.coverage.run]
omit = ["tests/*"]
