[tool.poetry]
name = "tainers"
version = "0.3.1"
description = "Simple replacement for testcontainers-python"
authors = ["aperullo <18688190+aperullo@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
docker = ">=7.0.0"

[tool.poetry.dev-dependencies]
black = "^24.4.2"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
mypy = "^1.10"
isort = "^5.10.1"
coverage = {extras = ["toml"], version = "^6.5.0"}
requests = "^2.32.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
addopts = "-s --cov=tainers --cov-report=term --cov-report=xml"
testpaths = ["tests"]
markers = [
    "functional"
]

[tool.coverage.run]
omit = ["tests/*"]
